--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="js/script.js"></script>
+    <script src="js/question-1.js"></script>
+    <script src="js/question-2.js"></script>
   </body>
 </html>
