--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container"></div>
     <script src="js/question-1.js"></script>
     <script src="js/question-2.js"></script>
   </body>
